trunk/Archive2/68/fba0177eb23d36/output
main.cpp: In function 'int main()':
main.cpp:21:23: error: invalid conversion from 'unsigned int' to 'const void*' [-fpermissive]
     memcpy(buf, tmp, 4);
                       ^
main.cpp:23:47: warning: dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]
     tmp = *reinterpret_cast<unsigned int*>(buf);
                                               ^
